log/build_2023-08-12_02-39-02/my_bot/stderr.log
  File "/home/joas329/Desktop/rover_simulation/install/my_bot/lib/python3.10/site-packages/my_bot/PID.py", line 21
    self.stack[] = RobotTrajectory()
               ^
SyntaxError: invalid syntax

